Fixing newline issue with whitespace:pre-line css (#175)
* Fixing newline issue with whitespace:pre-line css

* Simplifying css selector

--- a/src/views/htmlcontent/src/styles.css
+++ b/src/views/htmlcontent/src/styles.css
@@ -73,6 +73,10 @@ table {
   padding-bottom: 1em;
 }
 
+.messageValue {
+  white-space: pre-line;
+}
+
 .boxRow.content.padded {
     padding: 15px
 }
